Add full calendar tooltip on cells

--- a/fullcalendar-master/src/main.scss
+++ b/fullcalendar-master/src/main.scss
@@ -8,4 +8,5 @@
 @import './view.scss';
 @import './basic/basic.scss';
 @import './agenda/agenda.scss';
+@import './scheduler/scheduler.scss';
 @import './list/list.scss';
